deployment.yml
# deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: model-service-deployment
  labels:
    app: model-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: model-service
  template:
    metadata:
      labels:
        app: model-service
    spec:
      containers:
      - name: model-service
        image: "ghcr.io/remla25-team20/model-service:latest"
        ports:
        - containerPort: 8080
        # environment:
        #   - NODE_ENV=production
        #   - PORT=8080
        #   - HOSTNAME=0.0.0.0
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
  labels:
    app: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: app
        # TODO: workflow-released version does not work on arm/m-chip
        image: "ghcr.io/remla25-team20/app:0.1.4-arm"
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: model-service
spec:
  selector:
    app: model-service
  ports:
    - port: 8080
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: app-service
spec:
  selector:
    app: app
  ports:
    - port: 3000
      targetPort: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      # - path: /model-service
      #   pathType: Prefix
      #   backend:
      #     service:
      #       name: model-service
      #       port:
      #         number: 8080
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-service
            port:
              number: 3000
